src/styles/globals.css
html,
body {
  @apply bg-white h-screen;
  height: 100%;
  font-family: 'Prompt', sans-serif;
}

.loader div {
  animation-duration: 0.5s;
}

.loader div:first-child {
  animation-delay: 0.1s;
}

.loader div:nth-child(2) {
  animation-delay: 0.3s;
}

.loader div:nth-child(3) {
  animation-delay: 0.6s;
}

